# gnupod

./: AUTHORS  BUGS  CHANGES  FAQ  Makefile.in  README  README.about_m4a  README.developer  README.lastfm  README.smartplaylists  README_FIRMWARE.txt  TODO  configure  configure.ac
doc/: fdl.texi  gnupod.html  gnupod.info  gnupod.texi  gnupodrc  gnupodrc.example  gnutunesdb.example  mkspl.html  slack-desc_RAW  version.texi
man/: GNUtunesDB.pod  footer.pod  general-tools.pod  gnupod_INIT.pl.1  gnupod_addsong.pl.1  gnupod_check.pl.1  gnupod_find-options.pod  gnupod_otgsync.pl.1  gnupod_search.pl.1  mktunes.pl.1  tunes2pod.1  tunes2pod.pl.1
src/: gnupod_INIT.pl  gnupod_INITpod.pl  gnupod_addsong.pl  gnupod_check.pl  gnupod_convert_APE.pl  gnupod_convert_FLAC.pl  gnupod_convert_MIDI.pl  gnupod_convert_OGG.pl  gnupod_convert_RIFF.pl  gnupod_delete.pl  gnupod_find.pl  gnupod_fix_ids.pl  gnupod_m3u2pl.pl  gnupod_mkm3u.pl  gnupod_modify.pl  gnupod_otgsync.pl  gnupod_search.pl  mktunes.pl  tunes2pod.pl
src/ext/: ArtworkDB.pm  FileMagic.pm  FindHelper.pm  FooBar.pm  Hash58.pm  Mktunes.pm  QTfile.pm  README  SysInfo.pm  XMLhelper.pm  copyright  gnupod_list.pl  gnupod_renumber.pl  gnupod_search.pl  iPod.pm  iTunesDB.pm  lastfm.pm
tools/: extractArtwork.pl  fwpatch.pl  getINC.pl  getVERSION.pl  gnupod_install.pl  gnupod_testit.pl  ipod-mencoder.pl  m4a-info.pl  mkINC.pl  otgtest.pl  stresstest.pl
